# salon-ops-ai

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  salon.db
backend/app/: main.py
backend/app/api/: categories.py  cost_items.py  costs.py  forecast.py  project_summary.py
backend/app/core/: db.py  security.py
backend/app/domain/: logic.py  models.py
backend/tests/: conftest.py  test_api.py  test_categories.py  test_logic.py
frontend/: Dockerfile  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx
frontend/src/features/auth/: AuthGuard.tsx
frontend/src/features/auth/__tests__/: AuthGuard.test.tsx
frontend/src/features/costs/: CostsForm.tsx
frontend/src/features/forecast/: ForecastDashboard.tsx
frontend/src/features/forecast/__tests__/: ProfitLossSankey.test.tsx
frontend/src/features/forecast/charts/: CostBreakdownPie.tsx  ProfitLossSankey.tsx
frontend/src/features/project-costs/: ProjectCostsPage.tsx
frontend/src/features/project-costs/charts/: ProjectCostPie.tsx  ProjectCostSankey.tsx
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
