[tool.poetry]
name = "salon-ops-api"
version = "0.1.0"
description = "Internal component for salon decision support."
authors = ["Admin <admin@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
sqlmodel = "^0.0.19"
python-multipart = "^0.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
